# agent-ide

./: .gitignore  AI_AGENT_IDE_PLAN.md  Cargo.toml  PLAN.md  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  gen_icons.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: windows-package.yml
apps/client/: package.json
apps/desktop/: Cargo.toml  package.json  tauri.conf.json
apps/runtime/: Cargo.toml
demo/: e2e_test.ps1  hello.js
docs/: AI_WORKFLOW.md  ARCHITECTURE.md  DESKTOP_IDE.md  NEXT_STEPS.md  agent_changes_schema.md  agent_cli_design.md  agent_cli_manual.md  agent_ide_design.md  agent_ide_plan.md  agent_ide_ui_design.md  skeleton.jsx  smoke_test.md  testing_strategy.md
scripts/: package-windows.ps1
scripts/e2e/: prepare-workflow.ps1  run-workflow.ps1  verify-workflow.ps1  workflow-controller.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/agent/: diff_apply.rs  diff_gen.rs  executor.rs  mod.rs  multi_agent.rs  orchestrator.rs  planner.rs  state_machine.rs
src-tauri/src/cli/: mod.rs
src-tauri/src/commands/: agent.rs  fs.rs  git.rs  lsp.rs  mod.rs  tasks.rs  terminal.rs
src-tauri/src/services/: agent_runtime.rs  context.rs  credentials.rs  llm_client.rs  llm_profiles.rs  mod.rs  problem_parser.rs  project_tasks.rs  workspace.rs
src/hooks/: useAgentBridge.ts  useFixWithAgent.ts  useLspDiagnostics.test.ts  useLspDiagnostics.ts  useProjectTasks.ts  useShortcuts.ts  (+2 more)
(+63 files in other folders)
