[package]
name = "agent-ide"
version = "0.1.0"
description = "Agent IDE - AI-powered code editor"
authors = ["Agent IDE Team"]
edition = "2021"
default-run = "agent-ide"

[lib]
name = "agent_ide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
similar = "2"
chrono = { version = "0.4", features = ["serde"] }
notify = "6"
walkdir = "2"
git2 = "0.19"
dirs-next = "2"
